--- a/a1.html
+++ b/a1.html
@@ -3,7 +3,7 @@
   <head>
     <title>A1 Communication and Society as a System</title>
     <meta charset="utf-8" />
-    <meta name="author" content="C. Borchers, S. Noske, J. Kießling" />
+    <meta name="author" content="CB SN JK" />
     <meta name="date" content="2021-07-24" />
     <script src="a1_files/header-attrs-2.8/header-attrs.js"></script>
     <link href="a1_files/remark-css-0.0.1/tamu.css" rel="stylesheet" />
@@ -13,8 +13,8 @@
 class: center, middle, inverse, title-slide
 
 # A1 Communication and Society as a System
-## Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
-### C. Borchers, S. Noske, J. Kießling
+## Common Ground despite Controversy Creating a Digital Network
+### CB SN JK
 ### 2021-07-24
 
 ---
@@ -41,17 +41,17 @@ class: center, middle, inverse, title-slide
 
 ## What are we going to do?
 
-#### Day 1
+### Day 1
 
 A1 Communication and society as a System?
 
-A2 (Our) Perspectives on the pandemic - Anna Wanka (Goethe University Frankfurt)
+A2 (Our) Perspectives on the pandemic - with Anna Wanka (Goethe University Frankfurt)
 
 A3 Obstacles and rhetoric foundations in communication
 
 A4 Transfer: How to build a digital network (fast)
 
-#### Day 2
+### Day 2
 
 B1 Design and Implementation I
 
@@ -61,11 +61,7 @@ B3 Design and Implementation II
 
 B4 Wrapping up - Next Steps
 
----
-
-## What are we going to do?
-
-#### Follow-Up Meeting
+### Follow-Up Meeting
 
 Individual exercises
 
@@ -89,17 +85,16 @@ Creating a digital network for new means of communication
 breakout-rooms
 
 ---
-class: center, inverse
 
-# Part 1: Subject Matter of this Seminar and Introduction and Ideology
+# Subject Matter of this Seminar and Introduction and Ideology
 
 ---
 
-## What is Systemic Thinking?
+## Part 1: What is Systemic Thinking?
 
 * Loose collection of interdisciplinary study fields, ca. 1950
 
-* Some thinkers, such as Niklas Luhmann, established their own, 
+* Some thinkers, such as Niklas Luhman, established their own, 
 specific theories of systems, i.e., of society as a set of systems
 	* Our next slide presents examples of this
 
@@ -162,7 +157,6 @@ economics, simulations, ...
 
 
 * Chaos theory
-
 	* Linear elements can cause non-linear outcomes in a deterministic fashion
 
 --
@@ -199,6 +193,9 @@ class: center, inverse
 
 # Part 2: On the Topic of Ideology
 
+&lt;!-- https://docs.google.com/presentation/d/1Owh7BKx2b-HmUTIcPm_voY-ueXDTg5E-PNbk4GKVSQ8/edit#slide=id.p --&gt;
+
+
 ---
 
 ## Ideology
@@ -219,7 +216,7 @@ Ultimately, becoming aware of ideological presuppositions -  your own and that o
 * 3rd part: Questions and discussion 
 
 ---
-## What do &lt;u&gt;you&lt;/u&gt; know about ideology already?
+## What do *you* know about ideology already?
 
 Take 5 mins to discuss in small groups.
 
@@ -228,7 +225,6 @@ Take 5 mins to discuss in small groups.
 ## Your thoughts about Ideology
 
 ---
-class: center, inverse
 
 # Introduction to Ideology
 
@@ -241,6 +237,7 @@ class: center, inverse
 * Understanding ideology helps to understand society 
 
 * Ideology can become a “working tool” for our inquiry (and beyond)
+
 
 ---
 
@@ -324,134 +321,40 @@ class: center, inverse
 
 ---
 
-## I. Ideology as a Value Free Term
-
-* The content of an ideological standpoint might be “true”, yet thoroughly ideological
-
-* The content of a standpoint might be “false”, yet there is nothing ideological about it
-
-  * What matters is the claim to truth from which, in turn, a claim to power results
-  * &lt;b&gt;Truth is power!&lt;/b&gt;
-
-* Power defined as the ability to motivate someone to think or do something that he/she would not have otherwise (Forst 2015: 115)
-
----
-
-## Two Quick Examples
-
-* “Corona is a made up by Bill Gates, &lt;mark&gt;we have to fight back&lt;/mark&gt;!” 
-  * → Ideology, actor claims to know the “truth”
-
-
-* “Corona is made up by Bill Gates”
-  * no appeal, intention unclear, (could be a joke) → no Ideology 
-
-
-* Ideological substance depends on a subjects &lt;mark&gt;claim to power&lt;/mark&gt;!
-
-* Conclusion: “We are within ideological space proper the moment [...] ‘true’ or ‘false’ is functional with regard to some relation of [...] ‘power’” (Zizek 2012: 8)
-
----
-
-## II. Why Ideologies are Necessary for Society
-
-* In systems thinking: ideologies function as orientation and justification for action (Luhmann 1991: 57)
-
-&lt;br&gt;
-* Ideologies are about “a view of good society”
-* Seek to mobilize people for political projects
-* Ideology externalizes your inner beliefs (“individual truths”)
-
-&lt;br&gt;
-* Even you as participants can be seen as ideologues!
-
----
-
-## II. Why Ideologies are Necessary for Society
-
-* Different ideologies clash in society and are naturally inherent in politics  
-
-* Discussions and conflicts about “the good society” help us to move forward
-
-* How do we analyze this? → suggesting ideology critique as a tool 
-
----
-
-## Ideology Critique: Who? (Zürn and de Wilde 2016)
-
-
-* Who are the subjects of the (ideological) conflict?
-
-* Social groups and different kinds of ideological expertise 
-
-* Amateurs vs. ideological experts (leading speakers) and institutions (government, newspaper, societies)
-
----
-
-## Ideology Critique: Who? (Zürn and de Wilde 2016)
-
-* The notion of (public) discourse gives a broader framework
-  * Actors and institutions function within discourses 
-
-* Discourse in the broader sense (Habermas): 
-  * The negotiation process of claims of validity of different actors (Stanford Encyclopedia of Philosophy 2017)
-
-* Ideologies partake here because societal conflicts are negotiated in discourse
-
----
-
-## Ideology Critique: Who? (Zürn and de Wilde 2016)
-
-* We need to locate and identify key areas of conflict
-  * → “bones of contestation” (Zürn &amp; de Wilde 2016: 280)
-
-* For us especially important: what are areas/issues of contention in the pandemic? (Panel A2)
-
-* For “Critical Discourse Analysis”, we need empirical material:
-  * Newspapers, videos, podcasts, … what else?
-  
----
-
-## Our Takeaway
-
-* How do we escape a sheer amount of ideological standpoints?
-
-&lt;br&gt;&lt;br&gt;
-&gt; “Perhaps the higher task lies in learning to think relationally and dynamically, but not statically” (Mannheim 1978: 77).
-
-&lt;br&gt;&lt;br&gt;
-→ dynamic relationism
-
----
-class: center, inverse
-
 # Questions and Discussion
+
+
 
 ---
 
 ## References
 
-Forst, Rainer (2015): Noumenal Power. The Journal of Political Philosophy 23 (2): 111-127.
+* referencesss
+
+Sheehan, Thomas (no year): Plato. The Allegory of the Cave. Rebublic VII 514 a, 2 to 517 a,7. Online Document: https://web.stanford.edu/class/ihum40/cave.pdf.
 
 Hawkes, David (2003): Ideology. London: Routledge.
 
 Mannheim, Karl (1978): Ideologie und Utopie. 6. Auflage. Schulte-Bulmke: Frankfurt am Main.
 
-Sheehan, Thomas (no year): Plato. The Allegory of the Cave. Rebublic VII 514 a, 2 to 517 a,7. https://web.stanford.edu/class/ihum40/cave.pdf.
-
-Simon, F. B. (2020). Einführung in Systemtheorie und Konstruktivismus (Introduction to Systems Theory and Constructivism). Carl-Auer Verlag.
-
-Luhmann, Niklas (1991): Soziologische Aufklärung 1. Aufsätze zur Theorie sozialer Systeme. Opladen: Westdeutscher Verlag.
-
-Stanford Encyclopedia of Philosophy (2017): Habermas's Discourse Theory. https://plato.stanford.edu/entries/habermas/#HabDisThe
-
----
-
-## References
+Forst, Rainer (2015): Noumenal Power. The Journal of Political Philosophy 23 (2): 111-127.
 
 Zizek, Slavoj (2012): Mapping Ideology. London: Verso.
 
+Luhmann, Niklas (1991): Soziologische Aufklärung 1. Aufsätze zur Theorie sozialer Systeme. Opladen: Westdeutscher Verlag.
+
 Zürn, Michael and Peter de Wilde (2016): Debating Globalization: Cosmopolitanism and Communitarianism as Political Ideologies. Journal of Political Ideologies 21 (3): 280-301.
+
+Zürn, Michael and Peter de Wilde (2016): Debating Globalization: Cosmopolitanism and Communitarianism as Political Ideologies. Journal of Political Ideologies 21 (3): 280-301.
+
+Stanford Encyclopedia of Philosophy (2017): Habermas's Discourse Theory. Online Document: https://plato.stanford.edu/entries/habermas/#HabDisThe
+
+Zürn, Michael and Peter de Wilde (2016): Debating Globalization: Cosmopolitanism and Communitarianism as Political Ideologies. Journal of Political Ideologies 21 (3): 280-301.
+
+???
+
+presenter comment
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
