change md file first...

--- a/static/html/a3.html
+++ b/static/html/a3.html
@@ -1,36 +1,220 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Seminar Session</title>
+    <title>Obstacles and rhetoric foundations in communication</title>
     <meta charset="utf-8" />
     <meta name="author" content="CB SN JK" />
-    <meta name="date" content="2021-01-01" />
-    <script src="a3_files/header-attrs-2.5/header-attrs.js"></script>
+    <meta name="date" content="2021-07-24" />
+    <script src="a3_files/header-attrs-2.8/header-attrs.js"></script>
     <link href="a3_files/remark-css-0.0.1/tamu.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Seminar Session
+# Obstacles and rhetoric foundations in communication
 ## Common Ground despite Controversy Creating a Digital Network
 ### CB SN JK
-### 2021-01-01
+### 2021-07-24
 
 ---
 
 
-background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=1650&amp;q=80)
+## Challenges and Solutions for Effective Communication 
 
-## Outline
 
-.footnote[unsplash.com/photos/qmnpqDwla_E]
+Having observed in A2 how communication can be ineffective, this input is designed to give participants a short introduction into the challenges and solutions for effective communication. 
+
+By giving insight into the opposing views of systemic thinking and individual strategic communication we identify challenges in effective communication and propose building on the argumentation theory of Pragma-Dialectics a set of rules to implement in our upcoming discussions. 
+
+---
+
+## Structure of This Input
+
+1st part: Communication in Systems view vs. Orator view
+
+2nd part: Obstacles for a successful orator
+
+3rd part: Pragma-Dialectics and 6 Rules for a critical discussion 
+
+---
+## Systems View vs. Orator View
+
+* We are all part of interconnected systems, but still individuals with particular opinions
+
+* Convincing another discutant of the correctness of a standpoint is part of the process of forming consensus
+
+* Rhetorical action: a thin line between manipulation and persuasion
+
+&gt; “Those who ‘manipulate’, we can say, have secret goals,
+&gt; do not act openly, and communicate using tricks. Such communicative action
+&gt; must be excluded from real rhetoric, which is by definition always tied to
+&gt; socially acceptable means.” (Knape 2013: 6)
+
+---
+
+## Who is an Orator? (Lat.: “speaker”) 
+
+“A person is considered an orator when he/she has a goal (a telos), which he believes to be justified and which he seeks to achieve through communication” (Knape 2013: 6)
+
+* In our discussions each of you is to be considered an Orator!
+
+---
+
+## What do &lt;u&gt;you&lt;/u&gt; as an orator perceive as obstacles in communication?
+
+Take 5 mins to discuss in small groups. Consider our brainstorming in A2 as well as personal experiences.
+
+
+---
+
+## Obstacles for a Successful Orator
+
+&lt;b&gt;Situative resistance: (Knape 2013: 8)&lt;/b&gt;
+
+* Hostile audience that distracts from the communicative purpose
+
+* Recent events that might let the topic appear inappropriate 
+
+
+---
+
+## Obstacles for a Successful Orator
+
+&lt;b&gt;Medial resistance: (Knape 2013: 8)&lt;/b&gt;
+
+* Loss and distortion of information through different media 
+
+* Communication over distances needs a medium → such might limit the possibilities of the orator (e.g. telephone → just audio)
+
+* Absence of face-to-face communication; communication online (in case of an online-forum)
+
+---
+
+
+## Obstacles for a Successful Orator
+
+
+&lt;b&gt;Linguistic/ textual resistance: (Knape 2013: 8)&lt;/b&gt;
+
+* Expectations of conventional forms must be fulfilled for successful communication
+
+* Orator is bound to: 
+  * The grammatical structure of a language
+  * Socio-cultural norms of addressees 
+
+---
+
+## Obstacles for a Successful Orator
+
+&lt;b&gt;Cognitive resistance: (Knape 2013: 9)&lt;/b&gt;
+
+* Each person is a closed cognitive system 
+
+* Projective calculation: Orator must imagine himself/herself in the psyche of the audience to meet their needs
+
+* Differences in behavior and mentality (e.g. emotions) can distort communication  
+
+---
+
+## Obstacles for a Successful Orator
+
+&lt;b&gt;Recap on ideologies:&lt;/b&gt;
+
+* Allegory of the Cave → Perspective and experience differ through and make up distinct worldviews 
+
+* Pictures of “the good society” and “truth” vary across different ideologies
+ 
+How can two different ideologies prove the accuracy of their own judgements and the falseness of the others by argument? → Ineffective communication is to be expected.
+
+---
+
+## Agreeing on a Common Ground 
+
+* Implementing dynamic thinking in practice → dynamic relationism
+ 
+* We may not agree on a distinct truth as starting point, but we can agree on a way of mutual “truth”-finding → embrace different standpoints and one’s own particularity
+
+* Need for a “common ground” in discussion that allows proper argumentation
+
+---
+
+## A Quick Introduction to Pragma-Dialectics
+
+&lt;b&gt;Suggesting Pragma-Dialectics:&lt;/b&gt; (van Eemeren et al. 2014: 528)
+
+* Model of a critical discussion
+
+* Theoretically motivated idealization, not an utopia
+ 
+* Vital guidance for people who wish to resolve differences by means of argumentative discourse
+
+&lt;b&gt;Argumentation?!&lt;/b&gt;
+
+“Argumentation is a verbal, social, and rational activity aimed at convincing 
+a reasonable critic of the acceptability of a standpoint by putting forward a 
+constellation of propositions justifying or refuting the proposition expressed 
+in the standpoint” (van Eemeren and Grootendorst 2004: 1).
+ 
+---
+
+## Rules for a Critical Discussion
+
+* For effective communication we need a structure that ensures its quality
+
+* Based on the pragma-dialectical approach (van Eemeren and Grootendorst 2004: 135-157) we propose 6 Rules for our upcoming discussions
+
+
+---
+
+## Rules for a Critical Discussion
+
+* 1. Freedom of speech
+  
+  * Every discussant is free to defend or doubt a certain standpoint
+
+* 2. Burden of proof
+
+  * Who puts forward a standpoint is committed to defend it
+
+---
+
+## Rules for Critical Discussion
+
+* 3. 	Commitment to reference
+
+  * An attempted refutation has to refer to the standpoint that has actually been put forward by the counterparty
+
+* 4. 	Topic relatedness
+
+  * A standpoint has to be defended only by proper argumentation (e.g. not by appeal to authority) 
+
+---
+
+## Rules for Critical Discussion
+
+* 5. 	Usage of plausible argumentation schemes
+
+  * The justification of a standpoint has to consist of arguments that fit together 
+
+* 6.	Acceptance of the result
+
+  * If the justification of a standpoint has occurred in line with the discussion rules the discutants have to accept the standpoint as justified
+
+---
+class: center, inverse
+## Questions and Discussion 
+
 
 ---
 
 ## References
 
-* reference
+Knape, Joachim (2013): General Rhetoric. In: Knape, Joachim: Modern Rhetoric in Culture, Arts and Media, 1-69.
+
+Van Eemeran, Frans et al. (2014): The Pragma-Dialectical Theory of Argumentation. In: Van Eemeren et al. (2014): Handbook of Argumentation Theory. Springer: New York and London.
+
+Van Eemeren, Frans and Rob Grootendorst (2004): "A Systematic Theory of Argumentation. The Pragma-Dialectical Approach". Cambridge University Press: Cambridge.
 
 ???
 
