--- a/static/html/a3.html
+++ b/static/html/a3.html
@@ -169,11 +169,11 @@ in the standpoint” (van Eemeren and Grootendorst 2004: 1).
 
 ## Rules for a Critical Discussion
 
-* 1. Freedom of speech
+* Freedom of speech
   
   * Every discussant is free to defend or doubt a certain standpoint
 
-* 2. Burden of proof
+* Burden of proof
 
   * Who puts forward a standpoint is committed to defend it
 
@@ -181,11 +181,11 @@ in the standpoint” (van Eemeren and Grootendorst 2004: 1).
 
 ## Rules for Critical Discussion
 
-* 3. 	Commitment to reference
+* Commitment to reference
 
   * An attempted refutation has to refer to the standpoint that has actually been put forward by the counterparty
 
-* 4. 	Topic relatedness
+* Topic relatedness
 
   * A standpoint has to be defended only by proper argumentation (e.g. not by appeal to authority) 
 
@@ -193,18 +193,17 @@ in the standpoint” (van Eemeren and Grootendorst 2004: 1).
 
 ## Rules for Critical Discussion
 
-* 5. 	Usage of plausible argumentation schemes
+* Usage of plausible argumentation schemes
 
   * The justification of a standpoint has to consist of arguments that fit together 
 
-* 6.	Acceptance of the result
+* Acceptance of the result
 
   * If the justification of a standpoint has occurred in line with the discussion rules the discutants have to accept the standpoint as justified
 
 ---
 class: center, inverse
 ## Questions and Discussion 
-
 
 ---
 
