couple of details

--- a/static/html/a1.html
+++ b/static/html/a1.html
@@ -239,7 +239,7 @@ Take 5 mins to discuss in small groups.
 
 ## Ancient Origins of Ideology
 
-&amp;lt;img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/An_Illustration_of_The_Allegory_of_the_Cave%2C_from_Plato%E2%80%99s_Republic.jpg" width="100%" alt="cave-allegory"&amp;gt;
+&lt;img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/An_Illustration_of_The_Allegory_of_the_Cave%2C_from_Plato%E2%80%99s_Republic.jpg" width="100%" alt="cave-allegory"&gt;;
 
 ---
 
