--- a/static/html/a1.html
+++ b/static/html/a1.html
@@ -91,7 +91,7 @@ breakout-rooms
 ---
 class: inverse, center
 
-# Part 1: Subject Matter of this Seminar and Introduction and Ideology
+# Part 1: Subject Matter of this Seminar and Introduction to Ideology
 
 ---
 
@@ -207,6 +207,16 @@ Ultimately, becoming aware of ideological presuppositions - your own and that of
 
 ---
 
+## Overview
+
+* 1st part: Introduction
+
+* 2nd part: Theoretical input
+
+* 3rd part: Questions and discussion
+
+---
+
 ## What do &lt;u&gt;you&lt;/u&gt; know about ideology already?
 
 Take 5 mins to discuss in small groups.
@@ -239,7 +249,7 @@ Take 5 mins to discuss in small groups.
 
 ## Ancient Origins of Ideology
 
-&lt;img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/An_Illustration_of_The_Allegory_of_the_Cave%2C_from_Plato%E2%80%99s_Republic.jpg" width="100%" alt="cave-allegory"&gt;;
+&lt;img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/An_Illustration_of_The_Allegory_of_the_Cave%2C_from_Plato%E2%80%99s_Republic.jpg" width="100%" alt="cave-allegory"&gt;
 
 ---
 
@@ -252,16 +262,6 @@ Take 5 mins to discuss in small groups.
 * Here: people’s sense of reality is different and we are bound by perspective
 
 * Ideology as “an idea of the world” → distinct world view
-
----
-
-## Overview
-
-* 1st part: Introduction
-
-* 2nd part: Theoretical input
-
-* 3rd part: Questions and discussion
 
 ---
 
